# scaleway-registry-prune

./: Cargo.toml  README.md
.circleci/: config.yml
scaleway_registry_prune/: Cargo.toml
scaleway_registry_prune/src/: error.rs  main.rs
scaleway_sdk/: Cargo.toml
scaleway_sdk/src/: error.rs  lib.rs  registry.rs  status.rs
scaleway_sdk/tests/: registry.rs
scaleway_sdk/tests/fixtures/: image_tag_list.json  namespace_list.json
scaleway_sdk/tests/support/: server.rs
src/: error.rs  lib.rs  main.rs  scaleway.rs  scaleway_sdk.rs
src/scaleway_sdk/: registry.rs
tests/: registry.rs
tests/support/: server.rs
