[package]
name = "scaleway-registry-prune"
version = "0.0.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Command-line tool to clean up old images on your Scaleway Container Registry"
repository = "https://github.com/mkroman/scaleway-registry-prune"
readme = "README.md"
keywords = ["scaleway", "container", "registry"]
categories = ["development-tools"]

[dependencies]
clap = "2.33"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
humantime = "2.0"
failure = "0.1.7"
futures = "0.3.4"

[profile.release]
lto = "fat"
codegen-units = 1
