[package]
name = "scaleway-registry-prune"
version = "0.0.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Command-line tool to clean up old images on your Scaleway Container Registry"
repository = "https://github.com/mkroman/scaleway-registry-prune"
readme = "README.md"
keywords = ["scaleway", "container", "registry"]
categories = ["development-tools"]

[dependencies]
clap = "2.33"
env_logger = "0.7.1"
humantime = "2.0"
log = "0.4.8"
scaleway_sdk = { path = "../scaleway_sdk" }
tokio = { version = "0.2", features = ["full"] }
failure = "0.1.7"

[[bin]]
name = "scaleway-registry-prune"
path = "src/main.rs"
