[package]
name = "scaleway_sdk"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

[dependencies]
failure = "0.1.7"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
hyper = { version = "0.13.4", default-features = false, features = ["tcp", "stream"] }
http = "0.2.1"
