[package]
name = "scaleway_sdk"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
description = "Rust SDK for the Scaleway Developers API"
repository = "https://github.com/mkroman/scaleway-registry-prune/tree/master/scaleway_sdk"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["scaleway", "sdk", "api", "registry"]
categories = ["development-tools"]

[dependencies]
failure = "0.1.7"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
hyper = { version = "0.13.4", default-features = false, features = ["tcp", "stream"] }
http = "0.2.1"
